# repokit

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  README.md  _claude  init_python.sh  install.sh  repokit
.github/actions/python-versions/: action.yml  get_versions.py
.github/workflows/: bash-release.yml  bash-tests.yml  python-integration.yml  python-release.yml  python-tests.yml  release.yml  tests.yml
hooks/: pre-commit  pre-push
init/: 01_check_tools.sh  02_git_init.sh  03_create_repo.sh  04_initial_commit.sh  05_branch_prepare.sh  05_workflows.sh  06_ruleset.sh  06_workflows.sh  07_ruleset.sh  08_branch_push.sh  commit.sh  git_init.sh  instructions.sh  preflight.sh  pyproject.sh  remote.sh  repo.sh  ruleset.sh  workflows.sh
languages/bash/: bash_setup.sh  cog.toml  language_setup.sh
languages/bash/workflows/: integration.yml  release.yml  tests.yml
languages/bash/wrappers/: integration.yml  release.yml  tests.yml
languages/dotfiles/: 05_branch_prepare.sh  08_branch_push.sh  instructions.sh  setup.sh
languages/dotfiles/templates/: adopt  commit  gitignore  install  restart  uninstall  watch
languages/dotfiles/wrappers/: integration.yml
languages/python/: 06_language_setup.sh  instructions.sh  pyproject.toml  python_setup.sh  repokit_skill.md  setup.sh
languages/python/workflows/: integration.yml  release.yml  tests.yml
languages/python/wrappers/: integration.yml  release.yml  tests.yml
memory/: backlog.md  decisions.md  fix-github-app-auth.md  index.md  initial-build.md  universal-mode.md
templates/: pyproject.toml
templates/bash/workflows/: release.yml
templates/python/workflows/: integration.yml  release.yml
templates/workflows/: tests.yml
