[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{REPO}}"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
authors = [{ name = "Igor Djachenko" }]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest", "ruff", "mypy"]
release = ["build", "python-semantic-release"]

[project.urls]
Homepage = "https://github.com/{{OWNER}}/{{REPO}}"
Repository = "https://github.com/{{OWNER}}/{{REPO}}"
Issues = "https://github.com/{{OWNER}}/{{REPO}}/issues"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_message = "chore(release): v{version} [no ci]"
commit_author = "repokit <repokit@{{OWNER}}>"
major_on_zero = false
allow_zero_version = true
